--- a/MegaCOM/project.properties
+++ b/MegaCOM/project.properties
@@ -12,4 +12,4 @@ proguard.config=proguard-android.txt:proguard-project.txt
 
 # Project target.
 target=android-19
-android.library.reference.1=../android-support-v7-appcompat
+android.library.reference.1=../../../MEGA/ProyectosADTBundle/android-support-v7-appcompat
