Contact list view and Contact properties Added contact list view fragment and Contact properties activity. Added functionality related to contact view: back button and grid/list actionbar button.

--- a/MegaCOM/AndroidManifest.xml
+++ b/MegaCOM/AndroidManifest.xml
@@ -68,6 +68,13 @@
             android:launchMode="singleTop"
             android:uiOptions="splitActionBarWhenNarrow" >            
         </activity>
+        
+        <activity
+            android:name="ContactPropertiesActivity"
+            android:label="@string/contact_properties_activity"
+            android:launchMode="singleTop"
+            android:uiOptions="splitActionBarWhenNarrow" >            
+        </activity>
     </application>
 
 </manifest>
