--- a/MegaCOM/AndroidManifest.xml
+++ b/MegaCOM/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mega.android"
     android:installLocation="auto"
-    android:versionCode="2"
-    android:versionName="0.1" >
+    android:versionCode="3"
+    android:versionName="0.2" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -58,8 +58,14 @@
             android:launchMode="singleTop"
             android:uiOptions="splitActionBarWhenNarrow" > 
             
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            
             <meta-data android:name="android.support.UI_OPTIONS"
-                   android:value="splitActionBarWhenNarrow" />           
+                   android:value="splitActionBarWhenNarrow" />  
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />         
         </activity>
         
         <activity
