Initial overlayed action bar in image viewer and navigation accept button Implemented an overlayed action bar in the image viewer and home button modified in image viewer, file properties and contact properties to have a navigation accept icon instead (as it appears in the design). Added image buttons for the future action bar

--- a/MegaCOM/AndroidManifest.xml
+++ b/MegaCOM/AndroidManifest.xml
@@ -72,7 +72,9 @@
             android:name="FullScreenImageViewer"
             android:label="@string/full_screen_image_viewer_label"
             android:launchMode="singleTop"
-            android:configChanges="orientation|screenSize" >
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/full_screen_image_activity"
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         
         <activity
