New SDK working Added permissions SDK initialization in the Application class. Solved SSL issues. Fixed threading problems in delegate listeners. Added file type enum in MegaNode. SDK update

--- a/jni/mega/Makefile.inc
+++ b/jni/mega/Makefile.inc
@@ -48,7 +48,7 @@ CPP_SOURCES= src/attrmap.cpp \
     src/posix/fs.cpp  \
     src/posix/posixwaiter.cpp \
     linux/megaapiwait.cpp \
-    linux/megaapiposixhttpio.cpp \
+    android/megaapiandroidhttpio.cpp
     
 C_SOURCES = sqlite3.c android/glob.c
 
