--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,13 @@
               android:largeScreens="true"
               android:xlargeScreens="true"
               android:anyDensity="true"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     
     <application
+        android:name="MegaApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
