--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -95,6 +95,11 @@
             android:configChanges="orientation|screenSize"
             android:uiOptions="splitActionBarWhenNarrow" >            
         </activity>
+        
+        <service
+            android:name="DownloadService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
