--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -96,6 +96,12 @@
             android:uiOptions="splitActionBarWhenNarrow" >            
         </activity>
         
+        <activity 
+            android:name="FileExplorerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/login_activity">            
+        </activity>
+        
         <service
             android:name="DownloadService"
             android:exported="false" >
