--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,6 +102,12 @@
             android:theme="@style/login_activity">            
         </activity>
         
+        <activity
+            android:name="FileStorageActivity"
+            android:label="@string/app_name"
+            android:theme="@style/login_activity" >
+        </activity>
+        
         <service
             android:name="DownloadService"
             android:exported="false" >
