Generation and upload of thumbnails and previews The implementation uses Android features using JNI to avoid the usage of freeimage (it would increase the app size). The implementation takes into account all possible EXIF orientation values. SDK update

--- a/jni/mega/Makefile.inc
+++ b/jni/mega/Makefile.inc
@@ -48,7 +48,9 @@ CPP_SOURCES= src/attrmap.cpp \
     src/posix/fs.cpp  \
     src/posix/waiter.cpp \
     linux/megaapiwait.cpp \
-    android/megaapiandroidhttpio.cpp
+    android/megaapiandroidhttpio.cpp \
+    src/gfx.cpp \
+    src/gfx/android.cpp
     
 C_SOURCES = sqlite3.c android/glob.c
 
