Solved bug when clicking menu in FullScreenImageViewer

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -93,7 +93,7 @@
             android:name="FullScreenImageViewer"
             android:label="@string/full_screen_image_viewer_label"
             android:launchMode="singleTop"
-            android:theme="@style/full_screen_image_activity"
+            android:theme="@style/login_activity"
             android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         
