--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.mega" >
+        android:theme="@style/Theme.Megaactionbar" >
         
         <activity
             android:name="TourActivity"
