Shared folders, first attemp
Changes in the SDK layer made by Javier.
Changes in FilePropertiesActivity. Now, shares are listed and can be
removed (icons are not yet added)

--- a/jni/mega/Makefile.inc
+++ b/jni/mega/Makefile.inc
@@ -47,6 +47,7 @@ CPP_SOURCES= sdk/src/attrmap.cpp \
     sdk/src/posix/net.cpp  \
     sdk/src/posix/fs.cpp  \
     sdk/src/posix/waiter.cpp \
+    sdk/third_party/utf8proc/utf8proc.cpp \
     linux/megaapiwait.cpp \
     android/megaapiandroidhttpio.cpp \
     sdk/src/gfx.cpp \
