--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -122,7 +122,21 @@
         <activity 
             android:name="FileExplorerActivity"
             android:label="@string/app_name"
-            android:theme="@style/login_activity">            
+            android:theme="@style/login_activity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND_MULTIPLE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
         </activity>
         
         <activity
