--- a/jni/curl/.gitignore
+++ b/jni/curl/.gitignore
@@ -2,7 +2,10 @@
 /c-ares-1.10.0
 /curl
 /curl-7.32.0
+/curl-7.37.0
 /c-ares-1.10.0.tar.gz
 /c-ares-1.10.0.tar.gz_verified
 /curl-7.32.0.tar.gz
+/curl-7.37.0.tar.gz
 /curl-7.32.0.tar.gz_verified
+/curl-7.37.0.tar.gz_verified
