--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -176,6 +176,11 @@
         </activity>
         
         <service
+            android:name="CameraSyncService"
+            android:exported="false" >
+        </service>
+        
+        <service
             android:name="DownloadService"
             android:exported="false" >
         </service>
