--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     
     <application
         android:name="MegaApplication"
@@ -189,6 +190,17 @@
             android:name="UploadService"
             android:exported="false" >
         </service>
+        
+        <receiver
+	        android:name="com.mega.android.receivers.CameraEventReceiver"
+	        android:enabled="true" >
+	        <intent-filter>
+	            <action android:name="com.android.camera.NEW_PICTURE" />
+	            <action android:name="android.hardware.action.NEW_PICTURE" />
+            	<category android:name="android.intent.category.DEFAULT" />
+	            <data android:mimeType="image/*" />
+	        </intent-filter>
+    	</receiver>
     </application>
 
 </manifest>
