Modifications for x86 compiling in Application.mk It's commented. To compile both: APP_ABI=armeabi x86

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -123,6 +123,7 @@ clean: clean_mega
 	rm -rf $(OPENSSL)/$(OPENSSL_SOURCE_FOLDER)
 	rm -rf $(OPENSSL)/$(OPENSSL)
 	rm -rf ../obj/local/armeabi/
+	rm -rf ../obj/local/x86
 
 veryclean: clean
 	rm -rf $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) $(CRYPTOPP_VERIFIED_SOURCES)
