--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mega.android"
-    android:installLocation="auto"
+    android:installLocation="internalOnly"
     android:versionCode="25"
     android:versionName="0.24" >
 
