--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -176,6 +176,11 @@
             android:label="@string/upgrade_activity" >
         </activity>
         
+        <activity
+            android:name="PreferencesActivity"
+            android:label="@string/action_settings" >
+        </activity>
+        
         <service
             android:name="CameraSyncService"
             android:exported="false" >
