Folder links implemented (no multiselection yet) When clicking a folder link, a new activity starts (FolderLinkActivity) and the behavior is similar to the Browser Activity (navigation) The multiselection is not yet implemented.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -161,6 +161,11 @@
         </activity>
         
         <activity
+            android:name="FolderLinkActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
             android:name="SortByDialogActivity"
             android:label="@string/general_sort_by"
             android:theme="@android:style/Theme.Dialog">
