--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -162,7 +162,8 @@
         
         <activity
             android:name="FolderLinkActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         
         <activity
