--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -167,6 +167,12 @@
         </activity>
         
         <activity
+            android:name="FileLinkActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">            
+        </activity>
+        
+        <activity
             android:name="SortByDialogActivity"
             android:label="@string/general_sort_by"
             android:theme="@android:style/Theme.Dialog">
