--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="29"
-    android:versionName="@string/app_version" >
+    android:versionCode="31"
+    android:versionName="0.29" >
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
 
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+    
     <supports-screens android:resizeable="true"
               android:smallScreens="true"
               android:normalScreens="true"
