Update to the last stable version of OpenSSL

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -35,7 +35,7 @@ ARES_DOWNLOAD_URL=http://c-ares.haxx.se/download/$(ARES_SOURCE_FILE)
 ARES_VERIFIED_SOURCES=$(CURL)/$(ARES_SOURCE_FILE)_verified
 
 OPENSSL=openssl
-OPENSSL_VERSION=1.0.1e
+OPENSSL_VERSION=1.0.1h
 OPENSSL_SOURCE_FILE=openssl-$(OPENSSL_VERSION).tar.gz
 OPENSSL_SOURCE_FOLDER=$(OPENSSL)-$(OPENSSL_VERSION)
 OPENSSL_DOWNLOAD_URL=http://www.openssl.org/source/$(OPENSSL_SOURCE_FILE)
