--- a/jni/openssl/.gitignore
+++ b/jni/openssl/.gitignore
@@ -2,3 +2,6 @@
 /openssl-1.0.1e
 /openssl-1.0.1e.tar.gz
 /openssl-1.0.1e.tar.gz_verified
+/openssl-1.0.1h
+/openssl-1.0.1h.tar.gz
+/openssl-1.0.1h.tar.gz_verified
