Compatibility with the last SDK version

--- a/jni/mega/Makefile.inc
+++ b/jni/mega/Makefile.inc
@@ -52,7 +52,8 @@ CPP_SOURCES= sdk/src/attrmap.cpp \
     sdk/src/posix/waiter.cpp \
     sdk/src/posix/net.cpp \
     sdk/src/gfx.cpp \
-    sdk/src/gfx/external.cpp
+    sdk/src/gfx/external.cpp \
+    sdk/src/thread/posixthread.cpp
     
 C_SOURCES = sqlite3.c sdk/third_party/glob/glob.c
 
@@ -96,7 +97,8 @@ HEADERS= sdk/include/mega.h \
         sdk/include/mega/posix/megawaiter.h \
         sdk/include/mega/config-android.h \
         sdk/third_party/glob/glob.h \
-        sdk/include/mega/gfx/external.h
+        sdk/include/mega/gfx/external.h \
+        sdk/include/mega/thread/posixthread.h
 
 OBJECTS=$(CPP_SOURCES:.cpp=.o) $(C_SOURCES:.c=.o)
 C_WRAPPER_SOURCES = megaapi.cpp
