--- a/jni/mega/MakefileBindings
+++ b/jni/mega/MakefileBindings
@@ -21,7 +21,7 @@ $(JAVA_OBJECTS): $(JAVA_WRAPS) $(HEADERS)
 	
 $(JAVA_WRAPS) $(JAVA_BINDINGS): $(SWIG_INTERFACE) $(HEADERS)
 	mkdir -p $(JAVA_OUTPUT_PATH)
-	$(SWIG) -c++ -java -package $(JAVA_PACKAGE_NAME) -outdir $(JAVA_OUTPUT_PATH) -o $(JAVA_WRAPS) $(SWIG_INTERFACE)
+	$(SWIG) -c++ -Isdk/include -java -package $(JAVA_PACKAGE_NAME) -outdir $(JAVA_OUTPUT_PATH) -o $(JAVA_WRAPS) $(SWIG_INTERFACE)
 
 $(OBJECTS) $(C_WRAPPER_OBJECTS): $(HEADERS)
 
