--- a/src/com/mega/sdk/.gitignore
+++ b/src/com/mega/sdk/.gitignore
@@ -23,3 +23,6 @@
 /MegaShare.java
 /MegaTreeProcessor.java
 /MegaGfxProcessor.java
+/MegaProxy.java
+/MegaAccountDetails.java
+/MegaHashSignature.java
