Resolved: Task #652 - Add information in properties screen of shared folder Task #656 - Improve the view and the management of the shared folders properties in the Cloud Drive

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -137,6 +137,14 @@
             android:uiOptions="splitActionBarWhenNarrow" >            
         </activity>
         
+         <activity
+            android:name="FileContactListActivity"
+            android:label="@string/file_contact_list_activity"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
+            android:uiOptions="splitActionBarWhenNarrow" >            
+        </activity>
+        
         <activity 
             android:name="FileExplorerActivity"
             android:label="@string/app_name"
