--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -172,6 +172,12 @@
         </activity>
         
         <activity
+            android:name="ContactsExplorerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/login_activity" >
+        </activity>
+        
+        <activity
             android:name="FolderLinkActivity"
             android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow" >
