Task #655 - Phone contacts as MEGA contacts SOLVED

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,9 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
     
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    
+    
     <application
         android:name="MegaApplication"
         android:allowBackup="false"
