--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="38"
-    android:versionName="0.36" >
+    android:versionCode="39"
+    android:versionName="0.36_NewSDK" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -131,10 +131,9 @@
         </activity>
         
         <activity
-            android:name="ContactPropertiesActivity"
+            android:name="ContactPropertiesMainActivity"
             android:label="@string/contact_properties_activity"
             android:launchMode="singleTop"
-            android:configChanges="orientation|screenSize"
             android:uiOptions="splitActionBarWhenNarrow" >            
         </activity>
         
