--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="39"
-    android:versionName="0.36_NewSDK" >
+    android:versionCode="40"
+    android:versionName="0.37" >
 
     <uses-sdk
         android:minSdkVersion="9"
