--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -76,8 +76,7 @@
         <activity
             android:name="ManagerActivity"
             android:label="@string/manager_activity"
-            android:launchMode="singleTop"
-            android:uiOptions="splitActionBarWhenNarrow" > 
+            android:launchMode="singleTop" > 
             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -88,8 +87,6 @@
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
             
-            <meta-data android:name="android.support.UI_OPTIONS"
-                   android:value="splitActionBarWhenNarrow" />  
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />         
         </activity>
