Compatibility with the last SDK
New function: startUnbufferedDownload

--- a/src/com/mega/sdk/.gitignore
+++ b/src/com/mega/sdk/.gitignore
@@ -28,3 +28,7 @@
 /MegaHashSignature.java
 /MegaLogger.java
 /MegaPricing.java
+/MegaUserList.java
+/MegaTransferList.java
+/MegaShareList.java
+/MegaNodeList.java
