--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,7 +45,8 @@
             android:launchMode="singleTop" 
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
@@ -54,7 +55,8 @@
             android:launchMode="singleTop" 
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
@@ -62,7 +64,8 @@
             android:theme="@style/login_activity"
             android:label="@string/login_text" 
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden" >            
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >            
         </activity>    
 
         <activity
@@ -70,13 +73,15 @@
             android:label="@string/create_account_text"
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="ManagerActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" > 
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" > 
             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -94,10 +99,11 @@
         <activity 
             android:name="OfflineActivity"
             android:label="@string/section_saved_for_offline"
-            android:launchMode="singleTop" >            
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >            
         </activity>
         
-        <activity android:name="OpenLinkActivity" android:launchMode="singleTask" >
+        <activity android:name="OpenLinkActivity" android:launchMode="singleTask" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" ></action>
                 <category android:name="android.intent.category.DEFAULT" ></category>
@@ -124,13 +130,15 @@
         <activity
             android:name="FilePropertiesActivity"
             android:label="@string/file_properties_activity"
-            android:launchMode="singleTop">            
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity
             android:name="ContactPropertiesMainActivity"
             android:label="@string/contact_properties_activity"
-            android:launchMode="singleTop" >            
+            android:launchMode="singleTop" 
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity
@@ -138,20 +146,23 @@
             android:label="@string/contact_file_list_activity"
             android:launchMode="singleTop"
             android:configChanges="orientation|screenSize"
-            android:uiOptions="splitActionBarWhenNarrow" >            
+            android:uiOptions="splitActionBarWhenNarrow" 
+            android:screenOrientation="portrait">            
         </activity>
         
          <activity
             android:name="FileContactListActivity"
             android:label="@string/file_properties_shared_folder_select_contact"
             android:launchMode="singleTop"
-            android:configChanges="orientation|screenSize">            
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity 
             android:name="FileExplorerActivity"
             android:label="@string/app_name"
-            android:theme="@style/login_activity">
+            android:theme="@style/login_activity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -171,71 +182,84 @@
         <activity
             android:name="FileStorageActivity"
             android:label="@string/app_name"
-            android:theme="@style/login_activity" >
+            android:theme="@style/login_activity"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="ContactsExplorerActivity"
             android:label="@string/app_name"
-            android:theme="@style/login_activity" >
+            android:theme="@style/login_activity" 
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
             android:name="FolderLinkActivity"
             android:label="@string/app_name"
-            android:uiOptions="splitActionBarWhenNarrow" >
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="FileLinkActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop">            
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity
             android:name="SortByDialogActivity"
             android:label="@string/action_sort_by"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog"
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
             android:name="ChangePasswordActivity"
-            android:label="@string/my_account_change_password" >
+            android:label="@string/my_account_change_password" 
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
             android:name="UpgradeActivity"
-            android:label="@string/upgrade_activity" >
+            android:label="@string/upgrade_activity" 
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
             android:name="UpgradePaymentActivity"
-            android:label="@string/upgrade_activity" >
+            android:label="@string/upgrade_activity" 
+            android:screenOrientation="portrait">
         </activity>
         
         <activity
             android:name="SettingsActivity"
-            android:label="@string/action_settings" >
+            android:label="@string/action_settings"
+			android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="SettingsActivityHC"
-            android:label="@string/action_settings" >
+            android:label="@string/action_settings"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="PinLockActivity"
-            android:label="@string/settings_pin_lock" >
+            android:label="@string/settings_pin_lock"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="ZipBrowserActivity"
-            android:label="@string/zip_browser_activity" >
+            android:label="@string/zip_browser_activity"
+            android:screenOrientation="portrait" >
         </activity>
         
         <activity
             android:name="PdfFileViewerActivity"
-            android:label="@string/pdf_file_viewer_activity" >
+            android:label="@string/pdf_file_viewer_activity"
+            android:screenOrientation="portrait" >
         </activity>
         
         <service
