--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -131,14 +131,16 @@
             android:name="FilePropertiesActivity"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
         <activity
             android:name="ContactPropertiesMainActivity"
             android:label="@string/contact_properties_activity"
             android:launchMode="singleTop" 
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
         <activity
