--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -157,7 +157,8 @@
             android:label="@string/file_properties_shared_folder_select_contact"
             android:launchMode="singleTop"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
         <activity 
